Agilefant 2.0 Beta 2
Release notes
2010-05-28
--


This is an beta version of Agilefant 2.0.

Current status of the release:

- Beta 2 should be close to the final release of Agilefant 2.0
 * please report any found bugs at http://www.agilefant.org/mantis

- Browser support:
 * Firefox 3.0+ works
 * Google Chrome and Safari should work fine
 * IE8 is not guaranteed to work, but works to some standard
 * Opera has not been tested
 



+--------------------+
|     CHANGESET      |
+--------------------+

Changes from Beta 1
2010-05-28
+ Daily work functionality rewritten
+ Lots of improvements to story tree
 - The hierarchy consistency is mainted. For example a child story can not reside
   in a different project than its parent
+ All functionality that will be included in Agilefant 2.0 should be present 
+ Added help page and some quick help links
+ Daily Work, Timesheets, and Portfolio view can now be enabled/disabled in the settings

Changes from Alpha 5
2010-04-09
+ Story tree improvements
	- Editing story labels
	- Creating stories to empty story trees
	- Improved filtering and search capabilities
+ Performance improvements in project and iteration views
+ Ability to delete iterations, projects and products

 
Changes from Alpha 4
2010-02-12
+ Labels can be added to stories
+ Iteration workload
+ Story tree improvements, such as creating child and sibling stories
+ Improvements to setting pages
+ New user interface for logging spent effort


Changes from Alpha 3
2010-01-09
--
 + Project portfolio view added
 + Story tree on product and project pages
   - including changing parent-child relationships
   - sorting story trees
 + Sorting project child stories
 + 'My Assignments' in left hand menu
 + Minor timesheets improvements


Changes from Alpha 2
2009-11-17 
--
 + Timesheets functionality implemented
   - including logging effort for stories, tasks, iterations, projects and products
 + Story tree and hierarchy on project page
 + Splitting stories
 + New layout