@@ -129,7 +129,7 @@ businessTheme.nameTooLong = Theme name cannot be over 20 characters long.
 # struts messages
 
 # remember to change the build number to menu.tag
-struts.agilefantVersionNumber = 2.0 beta 2
+struts.agilefantVersionNumber = 2.0 RC1
 struts.agilefantReleaseId = agilefant_rev_3963
 struts.date.format = yyyy-MM-dd
 struts.dateTime.format = yyyy-MM-dd HH:mm:ss
