@@ -1,0 +1,1 @@
+<script type="text/javascript" src="static/js/Dynamics.js?<ww:text name="struts.agilefantReleaseId" />"></script>
