@@ -503,7 +503,7 @@ StoryController.prototype.storyPointsEditable = function() {
       autoScale : true,
       cssClass : 'task-row',
       title : "ES",
-      headerTooltip : 'Effort spent',
+      headerTooltip : 'Spent effort',
       get : TaskModel.prototype.getEffortSpent,
       decorator: DynamicsDecorators.exactEstimateDecorator,
       editable : false,
